--- a/_posts/2021-12-22-마인크래프트에-대한-고찰.md
+++ b/_posts/2021-12-22-마인크래프트에-대한-고찰.md
@@ -3,8 +3,8 @@ layout: post
 title: 마인크래프트는 생각보다 대단한 게임이다
 author: ccppoo
 color:
-feature-img:
-thumbnail:
+feature-img: "/assets/img/posts/about_minecraft/minecraft_caves_n_cliff.jpg"
+thumbnail: "/assets/img/posts/about_minecraft/minecraft_caves_n_cliff.jpg"
 tags: [마인크래프트, Minecraft, 매슬로의 욕구단계설, 메타버스, 심리학]
 ---
 
