--- a/_posts/2021-12-26-KWU-오픈열람실-API-만들기-1.md
+++ b/_posts/2021-12-26-KWU-오픈열람실-API-만들기-1.md
@@ -1,14 +1,15 @@
 ---
 layout: post
 title: KWU 도서관 오픈열람실 API 만들기
-hide_title: true
-feature-img:  "" 
-thumbnail: "assets/img/posts/making-KWU-reading-room-API.aws-logo.png"
-color: rgb(73,212,185) 
+hide_title: false
+feature-img:  "assets/img/aws_logo.svg" 
+thumbnail: "assets/img/aws_logo.svg"
+color: black
 bootstrap: true
 tags: [2021, ] # 태그는 작성하면 알아서 분류됨
 author: ccppoo
 ---
+
 
 동아리 운영을 위해서, 또 나 자신을 위해서 보편적이면서도 안 만들어진,
 
