제목 태그 수정

--- a/_posts/2021-12-26-KWU-오픈열람실-API-만들기-1.md
+++ b/_posts/2021-12-26-KWU-오픈열람실-API-만들기-1.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: KWU 도서관 오픈열람실 API 만들기
+title: KWU 도서관 오픈열람실 API 만들기 - 1편 AWS 설계
 hide_title: false
 feature-img:  "assets/img/aws_logo.svg" 
 thumbnail: "assets/img/aws_logo.svg"
 color: black
 bootstrap: true
-tags: [2021, ] # 태그는 작성하면 알아서 분류됨
+tags: [2021, 광운대, API, AWS, AWS Lambda] # 태그는 작성하면 알아서 분류됨
 author: ccppoo
 ---
 
