글 하이퍼링크 직관성 수정

--- a/_posts/2021-12-30-블로그-글-작성-계획.md
+++ b/_posts/2021-12-30-블로그-글-작성-계획.md
@@ -128,12 +128,13 @@ author: ccppoo
 
 여기까지 난해한 글을 읽느라 수고하셨다.
 
-나는 군대에 있으면서 기술이나 기술 회사의 움직임에 대해 [MyMilitaryServiceLog](https://github.com/ccppoo/MyMilitaryServiceLog) 
-레포지토리에 글을 작성했다.
+나는 군대에 있으면서 기술이나 기술 회사의 움직임에 대해 MyMilitaryServiceLog 레포지토리에 글을 작성했다.
 
-[미래를 내다보는 글](https://github.com/ccppoo/MyMilitaryServiceLog/tree/master/%EB%AF%B8%EB%9E%98%EB%A5%BC%20%EB%82%B4%EB%8B%A4%EB%B3%B4%EB%8A%94%20%EA%B8%80)
+- 레포지토리 : [MyMilitaryServiceLog](https://github.com/ccppoo/MyMilitaryServiceLog)
 
-[JustWritting](https://github.com/ccppoo/MyMilitaryServiceLog/tree/master/JustWritting)
+- [MyMilitaryServiceLog / 미래를 내다보는 글 (클릭!)](https://github.com/ccppoo/MyMilitaryServiceLog/tree/master/%EB%AF%B8%EB%9E%98%EB%A5%BC%20%EB%82%B4%EB%8B%A4%EB%B3%B4%EB%8A%94%20%EA%B8%80)
+
+- [MyMilitaryServiceLog / JustWritting (클릭!)](https://github.com/ccppoo/MyMilitaryServiceLog/tree/master/JustWritting)
 
 글의 주장이나 근거를 첨부하지 않은, 소위 '뇌피셜'을 작성한 글이지만
 
