--- a/_posts/2022-01-10-강의-자료-준비-힘들다.md
+++ b/_posts/2022-01-10-강의-자료-준비-힘들다.md
@@ -91,7 +91,7 @@ gRPC의 경우 엔터프라이즈에 치중된 기술이라 개인이 직접 구
 
 한 강의를 직접 제작하는 시간이 아니어도 과제를 검토하고 구상을 하는 시간을 감안하면
 
-1시간 ~ 1시간 반 강의를 준비하는데 대략 10시간이 걸린다고 볼 수 있다.
+1시간 ~ 1시간 반 강의를 준비하는데 대략 20시간(순수)이 걸린다고 볼 수 있다.
 
 <br>
 
